--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <div class="inline-block">
                 <div class="logo">
-                    <img src="../Images/Logo.png" height="75px" alt="Logo">
+                    <img src="Images/Logo.png" height="75px" alt="Logo">
                 </div>
             </div>
 
@@ -27,7 +27,7 @@
 
         <section class="heroImg">
             <div class="content">
-                <img src="../Images/Me.jpg"alt="Me">
+                <img src="Images/Me.jpg"alt="Me">
                 <h1>Hi, I'm Meredith</h1>
                 <p>A true right-brainer, I am a multi-disciplinary designer focused on UX/UI design. I am happiest when creating, I live for the editorial and iteration processes, and I work hard to make the world a more inclusive and accessible place.</p>
                 <button type="button">Download Resume</button>
